Remove unnecessary workarounds